syntax = "proto3";

package domain;

option go_package = "github.com/ariefsn/go-grpc/server/domain";

import "google/protobuf/timestamp.proto";

message TodoPayload {
  string title = 1;
  string description = 2;
}

message TodoPayloadStatus {
  string id = 1;
  bool isCompleted = 2;
}

message TodoPayloadUpdate {
  string id = 1;
  string title = 2;
  string description = 3;
  bool isCompleted = 4;
}

message TodoPayloadId {
  string id = 1;
}

message TodoPayloadList {
  optional string title = 1;
  optional string description = 2;
  optional bool isCompleted = 3;
  optional int64 skip = 4;
  optional int64 limit = 5;
}

message TodoModel {
  string id = 1;
  string title = 2;
  string description = 3;
  bool isCompleted = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message TodoResponseSingle {
  TodoModel data = 1;
  bool success = 2;
  string message = 3;
}

message TodoResponseMultipleData {
  double total = 1;
  repeated TodoModel items = 2;
}

message TodoResponseMultiple {
  TodoResponseMultipleData data = 1;
  bool success = 2;
  string message = 3;
}

service TodoHandler {
  rpc Gets (TodoPayloadList) returns (TodoResponseMultiple);
  rpc Get (TodoPayloadId) returns (TodoResponseSingle);
  rpc Create (TodoPayload) returns (TodoResponseSingle);
  rpc Update (TodoPayloadUpdate) returns (TodoResponseSingle);
  rpc UpdateStatus (TodoPayloadStatus) returns (TodoResponseSingle);
  rpc Delete (TodoPayloadId) returns (TodoResponseSingle);
}